:sparkles: [feat]: finish dark mode application

--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon-32x32.png" sizes="32x32" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet" />
     <title>Frontend Mentor | Todo App</title>
   </head>
-  <body>
-    <div id="app"></div>
+  <body class="bg-slate-900 text-slate-200 font-josefin">
+    <div class="pb-14" id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
