--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet" />
     <title>Frontend Mentor | Todo App</title>
   </head>
-  <body class="bg-slate-900 text-slate-200 font-josefin">
+  <body class="dark:bg-slate-900 dark:text-slate-200 bg-slate-200 text-slate-900 font-josefin">
     <div class="pb-14" id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
